--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="askButtonText">Ask</string>
+    <string name="decisionsText">Make everyday decisions easier!</string>
+    <string name="contDesc4ImgV">8ball</string>
 </resources>
